<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#00FF00"
    android:fillViewport="true" 
    >

    <LinearLayout
        android:id="@+id/mainlinearlayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:orientation="vertical" >
        
        <LinearLayout
        android:id="@+id/cardlayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/imgTable1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/card1descrip"
            android:src="@drawable/ic_launcher" />

        <ImageView
            android:id="@+id/imgTable2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/card1descrip"
            android:src="@drawable/ic_launcher" />

        <ImageView
            android:id="@+id/imgTable3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/card1descrip"
            android:src="@drawable/ic_launcher" />

        <ImageView
            android:id="@+id/imgTable4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/card1descrip"
            android:src="@drawable/ic_launcher" />

        <ImageView
            android:id="@+id/imgTable5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/card1descrip"
            android:src="@drawable/ic_launcher" />
        </LinearLayout>
        
        <TextView
            android:id="@+id/lblCurrentBet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblCurrentBet"
            android:textAppearance="?android:attr/textAppearanceLarge" />
               
       <LinearLayout
        android:id="@+id/playerlayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

           <TextView
               android:id="@+id/txtPlayer1"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/lblPlayer1"
               android:textAppearance="?android:attr/textAppearanceMedium" />

           <TextView
               android:id="@+id/txtPlayer2"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/lblPlayer2"
               android:textAppearance="?android:attr/textAppearanceMedium" /> 
		    <TextView
		        android:id="@+id/txtPlayer3"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/lblPlayer3"
		        android:textAppearance="?android:attr/textAppearanceMedium"
		        android:layout_marginBottom="2dp" />
		    
    	</LinearLayout>
    	
   		<View
			 android:layout_width="fill_parent"
			 android:layout_height="1dp"
			 android:background="@android:color/black" />
    		
       <LinearLayout
        android:id="@+id/currentplayerlayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
		    
		    
		    <TextView
        android:id="@+id/txtPlayerMe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblPlayerMe"
        android:textAppearance="?android:attr/textAppearanceMedium" />
		    
		    <TextView
        android:id="@+id/lblyourhand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblYourhand"
        android:textAppearance="?android:attr/textAppearanceSmall" />
              
	              <LinearLayout
	        android:id="@+id/playercardslayout"
	        android:layout_width="fill_parent"
	        android:layout_height="fill_parent"
	        android:orientation="horizontal" >
					    <ImageView
			        android:id="@+id/card1spot"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:contentDescription="@string/card1descrip"
			        android:src="@drawable/ic_launcher" />
			
			    		<ImageView
			        android:id="@+id/card2spot"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:contentDescription="@string/card2descrip"
			        android:src="@drawable/ic_launcher" />
	             </LinearLayout>
	             
       </LinearLayout>
       <View
				 android:layout_width="match_parent"
				 android:layout_height="1dp"
				 android:background="@android:color/black" />
       <LinearLayout
	        android:id="@+id/buttonlayout"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal" >
       
           <Button
	        android:id="@+id/btnFold"
	        style="?android:attr/buttonBarButtonStyle"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:onClick="clickedFold"
	        android:text="@string/strFold" />
           
           <Button
	        android:id="@+id/update"
	        style="?android:attr/buttonBarButtonStyle"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/update" />
           <Button
	        android:id="@+id/btnBet"
	        style="?android:attr/buttonBarButtonStyle"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:onClick="clickedBet"
	        android:visibility="invisible"
	        android:text="@string/strBetbtn" />
           
       </LinearLayout>
       
    
    </LinearLayout>
</ScrollView>