<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".GameLobby" 
    android:background="#0047AB">

    <Button
        android:id="@+id/btnStartGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="38dp"
        android:layout_marginTop="26dp"
        android:text="@string/startGamestring"
        android:background="#00FF00" />

    <Button
        android:id="@+id/btnJoinGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/btnStartGame"
        android:layout_marginLeft="38dp"
        android:layout_marginTop="26dp"
        android:text="@string/joinGamestring"
        android:background="#00FF00" />

    <Button
        android:id="@+id/Login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnJoinGame"
        android:layout_below="@+id/btnStartGame"
        android:layout_marginTop="100dp"
        android:background="#00FF00"
        android:text="@string/login" />
    <ListView
            android:id="@+id/list"
            android:layout_below="@+id/Login"
            android:layout_height="wrap_content"
            android:layout_width="match_parent">
</ListView>

</RelativeLayout>
